# axum-boilerplate

./: .gitignore  Cargo.toml  app_config_local.toml  app_config_local2.toml  config.toml  log4rs.yaml
app/: Cargo.toml  app_config_local.toml  build.rs  config.toml
app/sql/: ddl.sql
app/src/: app_state.rs  application_context.rs  define.rs  diagnostics.rs  main.rs
app/src/dto/: sample.rs
app/src/entity/: mod.rs  sample.rs
app/src/repository/: basic_repository.rs  mod.rs  sample_repository.rs  sample_repository_impl.rs
app/src/route/: basic.rs  mod.rs
app/src/router/: basic.rs  mod.rs
app/src/router/v1/: sample_router.rs
app/src/routes/: basic.rs  mod.rs
app/src/tests/: mod.rs  sample_usecase_test.rs
app/src/usecase/: basic_sample_usecase.rs  mod.rs  sample_usecase.rs
app/src/util/: config.rs  extractorext.rs  middleware.rs
app/src/utils/: config.rs  log.rs  mod.rs  tracing.rs
app/src/ws/: pubsub.rs
migrations/: 0001_sample.sql
src/: app_state.rs  define.rs  diagnostics.rs  main.rs  session_impl.rs
src/depend/: mod.rs  session.rs  user.rs
src/depends/: mod.rs  session.rs  user.rs
src/dto/: mod.rs  sample.rs
src/entity/: mod.rs  user.rs
src/proto/: mod.rs  voting.proto  voting.rs
src/repository/: mod.rs  sample_repository.rs
src/router/: basic.rs  mod.rs
src/router/v1/: mod.rs  sample_router.rs
src/tests/: sample_usecase_test.rs
src/usecase/: mod.rs
src/util/: config.rs  middleware.rs  mod.rs  tracing.rs
src/utils/: config.rs  log.rs  mod.rs  tracing.rs
src/ws/: pubsub.rs
static/: home.html  pubsub.html
tests/: Cargo.toml
tests/client/: Cargo.toml
tests/client/src/: main.rs
tests/python/: generate  voting_grpc.py  voting_pb2.py  voting_pb2.pyi  voting_pb2_grpc.py
tests/src/: main.rs
