[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
log4rs = "1.2.0"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.17"
axum = { version = "0.6.20", features = ["multipart", "ws", "headers"] }
axum-extra = { version = "0.8.0", features = ["cookie"] }
axum-macros = "0.3.7"
hyper = { version = "0.14.26", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
anyhow = "1.0.75"
toml = "0.8.0"
thiserror = "1.0.48"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "json",
    "sqlite",
] }
async-trait = "0.1.73"
futures = "0.3.28"
tonic = "0.10.2"
prost = "0.12.1"
tonic-reflection = "0.10.2"
bb8-redis = "0.13.1"
bb8 = "0.8.1"

[build-dependencies]
tonic-build = "0.10.2"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
default = [
    "enable_websocket_pubsub_sample",
    "use_sqlite",
]
enable_websocket_pubsub_sample = []
use_sqlite = []
use_postgres = []
