[package]
name = "axum-boilerplate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
log4rs = "1.2.0"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.17"
axum = { version = "0.6.18", features = ["multipart", "ws"] }
axum-macros = "0.3.7"
hyper = { version = "0.14.26", features = ["full"] }
tower =  { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }
serde =  { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
anyhow = "1.0.75"
toml = "0.8.0"
thiserror = "1.0.48"

[dev-dependencies]
httpc-test = "0.1.5"
