[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project = "1.1.3"
reqwest = "0.11.20"
tokio = { version = "1.28.2", features = ["full"] }

[dev-dependencies]
httpc-test = "0.1.5"
anyhow = "1.0.75"
